--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-<?php include 'header.html'; ?>
+<!-- Placeholder for Header -->
+<div id="header"></div>
 
 <div class="hero-section d-flex align-items-center justify-content-center">
     <div class="overlay-text text-center">
@@ -19,9 +20,33 @@
     </div>
 </div>
 
-<?php include 'footer.php'; ?>
+<!-- Placeholder for Footer -->
+<div id="footer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/scripts.js"></script>
+
+<!-- JavaScript to load header and footer -->
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Load header
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading header:', error));
+        
+        // Load footer
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
+    });
+</script>
+
 </body>
 </html>
+
