--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<!-- footer.php -->
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; <?php echo date("Y"); ?> Simate Simasiku. All rights reserved.</p>
+<!-- footer.html -->
+<footer class="text-center py-3">
+    <p>&copy; 2024 Simasiku. All rights reserved.</p>
 </footer>
