--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!-- header.html -->
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Simasiku</a>
+        <a class="navbar-brand" href="index.html">Simate Simasiku</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
