--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,9 @@
         <h1>Contact Information</h1>
         <p>If you would like to get in touch, please reach out to me through any of the following methods:</p>
         <ul>
-            <li><strong>Email:</strong> simasiku@example.com</li>
-            <li><strong>Phone:</strong> +260 123 456 789</li>
+            <li><strong>Email:</strong> simatesimasiku8@gmail.com</li>
+            <li><strong>Phone:</strong> +260 978 498 129</li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></li>
-            <li><strong>Twitter:</strong> <a href="https://twitter.com/yourprofile" target="_blank">@yourprofile</a></li>
         </ul>
     </div>
 </section>
