--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <ul>
             <li><strong>Email:</strong> simatesimasiku8@gmail.com</li>
             <li><strong>Phone:</strong> +260 978 498 129</li>
-            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Simate Simasiku</a></li>
         </ul>
     </div>
 </section>
