--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <!-- Placeholder for Header -->
 <div id="header"></div>
 
-<div class="hero-section d-flex align-items-center justify-content-center">
-    <div class="overlay-text text-center">
-        <h1 class="display-4">Welcome to My Portfolio</h1>
-        <p class="lead">Explore my projects, skills, and experience</p>
+<div class="hero-section">
+    <div class="overlay-text">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Explore my projects, skills, and experience</p>
     </div>
 </div>
 
