--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,16 @@
     <title>Simate Simasiku's Portfolio</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Bootstrap CSS -->
+
+    <div id="header"></div>
+
+<div class="hero-section">
+    <div class="overlay-text">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Explore my projects, skills, and experience</p>
+    </div>
+</div>
+    
 </head>
 <body>
     <header class="text-center bg-primary text-white py-5">
