--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Bootstrap CSS -->
 </head>
 <body>
+
+    <!-- Reference to the existing header -->
     <header class="text-center bg-primary text-white py-5">
         <h1>Simate Simasiku</h1>
         <p>Welcome to my professional portfolio</p>
