--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-4">
-                <img src="assets/images/simate.jpg" alt="Simate Simasiku" class="img-fluid rounded-circle">
+                <img src="assets/images/Simate.jpg" alt="Simate Simasiku" class="img-fluid rounded-circle">
             </div>
             <div class="col-md-8">
                 <h2>About Me</h2>
