--- a/header.html
+++ b/header.html
@@ -1,4 +1,8 @@
 <!-- header.html -->
+<!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Simate Simasiku</a>
@@ -15,3 +19,10 @@
         </div>
     </nav>
 </header>
+
+
+    </html>
+
+
+
+
