--- a/index.html
+++ b/index.html
@@ -1,52 +1,29 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simasiku - Portfolio</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simasiku - Portfolio</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<!-- Placeholder for Header -->
-<div id="header"></div>
+  <header id="header">
+    </header>
 
-<div class="hero-section">
+  <div class="hero-section">
     <div class="overlay-text">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Explore my projects, skills, and experience</p>
+      <h1 class="hero-title">Welcome to My Portfolio</h1>
+      <p>Explore my projects, skills, and experience</p>
     </div>
-</div>
+  </div>
 
-<!-- Placeholder for Footer -->
-<div id="footer"></div>
+  <footer id="footer">
+    </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/scripts.js"></script>
-
-<!-- JavaScript to load header and footer -->
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // Load header
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading header:', error));
-        
-        // Load footer
-        fetch('footer.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading footer:', error));
-    });
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 
 </body>
 </html>
-
