--- a/contact.html
+++ b/contact.html
@@ -1,58 +1,70 @@
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Simasiku</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Simate Simasiku</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Placeholder for Header -->
-<div id="header"></div>
-
-<section class="contact-section">
-    <div class="contact-image">
-        <img src="images/simate.jpg" alt="Simate Simasiku">
+<!-- Navigation Bar (can be copied from your main page if you want it here) -->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="index.html">Simasiku</a>
     </div>
-    <div class="contact-content">
-        <h1>Contact Information</h1>
-        <p>If you would like to get in touch, please reach out to me through any of the following methods:</p>
-        <ul>
-            <li><strong>Email:</strong> simatesimasiku8@gmail.com</li>
-            <li><strong>Phone:</strong> +260 978 498 129</li>
-            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Simate Simasiku</a></li>
-        </ul>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </div>
-</section>
+  </div>
+</nav>
 
-<!-- Placeholder for Footer -->
-<div id="footer"></div>
+<!-- Contact Section -->
+<div class="container contact-section">
+  <h2>Contact Me</h2>
+  <p>I’d love to hear from you! Please fill out the form below to get in touch.</p>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Contact Form -->
+  <form action="/submit_form" method="post" class="contact-form">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required>
 
-<!-- JavaScript to load header and footer -->
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // Load header
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading header:', error));
-        
-        // Load footer
-        fetch('footer.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading footer:', error));
-    });
-</script>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+
+    <button type="submit" class="submit-btn">Send Message</button>
+  </form>
+
+  <!-- Contact Information -->
+  <div class="contact-info">
+    <h3>Contact Information</h3>
+    <p>Email: simatesimasiku8@gmail.com</p>
+    <p>Phone: +260 978 498 129</p>
+    <p>Address: Lusaka, Zambia</p>
+    
+    <h3>Connect with Me</h3>
+    <a href="https://twitter.com/simatsim" target="_blank">Twitter</a> |
+    <a href="https://linkedin.com/in/simatsim" target="_blank">LinkedIn</a> |
+    <a href="https://facebook.com/simatsim" target="_blank">Facebook</a>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="container-fluid text-center">
+  <p>&copy; Simate Simasiku - All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
