--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </div><br><br>
 
 <!-- Footer -->
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center" style="background-color: #333; color: #fff; padding: 25px;">
   <p>&copy; Simate Simasiku - All Rights Reserved</p>
 </footer>
 
