--- a/submit_form.html
+++ b/submit_form.html
@@ -6,14 +6,94 @@
   <title>Message Sent - Simate Simasiku</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    /* General Styling */
+    body {
+      background-color: #005f73; /* Blue background color */
+      font-family: Arial, sans-serif;
+      color: #ffffff;
+    }
+
+    /* Fade-in Slide-down Animation for Success Message */
     .success-message {
       text-align: center;
       background-color: #28a745;
       color: white;
       padding: 20px;
       border-radius: 5px;
-      margin-top: 50px;
+      margin: 50px auto;
       font-size: 20px;
+      max-width: 500px;
+      animation: fadeSlide 1s ease-out;
+    }
+
+    @keyframes fadeSlide {
+      0% {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Checkmark Animation */
+    .checkmark {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: white;
+      margin-bottom: 15px;
+      position: relative;
+      animation: fadeIn 1.5s;
+    }
+
+    .checkmark:before {
+      content: "";
+      position: absolute;
+      top: 12px;
+      left: 10px;
+      width: 10px;
+      height: 20px;
+      border-right: 5px solid #28a745;
+      border-bottom: 5px solid #28a745;
+      transform: rotate(45deg);
+      animation: drawCheck 0.6s ease forwards;
+    }
+
+    @keyframes drawCheck {
+      from {
+        width: 0;
+        height: 0;
+      }
+      to {
+        width: 10px;
+        height: 20px;
+      }
+    }
+
+    /* Light Confetti Animation */
+    .confetti {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+    }
+
+    .confetti-piece {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: rgba(255, 255, 255, 0.8);
+      animation: fall 3s linear infinite;
+    }
+
+    @keyframes fall {
+      0% { transform: translateY(-100vh) rotate(0deg); }
+      100% { transform: translateY(100vh) rotate(360deg); }
     }
   </style>
 </head>
@@ -21,7 +101,17 @@
 
 <!-- Success Message -->
 <div class="success-message">
+  <div class="checkmark"></div> <!-- Checkmark Icon -->
   <p>Your message has been successfully sent to <strong>simatesimasiku8@gmail.com</strong>.</p>
+</div>
+
+<!-- Confetti Animation -->
+<div class="confetti">
+  <!-- Example confetti pieces -->
+  <div class="confetti-piece" style="left: 20%; animation-delay: 0.2s;"></div>
+  <div class="confetti-piece" style="left: 40%; animation-delay: 0.4s;"></div>
+  <div class="confetti-piece" style="left: 60%; animation-delay: 0.6s;"></div>
+  <div class="confetti-piece" style="left: 80%; animation-delay: 0.8s;"></div>
 </div>
 
 <!-- Footer -->
