--- a/submit_form.html
+++ b/submit_form.html
@@ -8,7 +8,7 @@
   <style>
     /* General Styling */
     body {
-      background-color: #005f73; /* Blue background color */
+      background-color: #cbebff; /* Blue background color */
       font-family: Arial, sans-serif;
       color: #ffffff;
     }
