--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <div class="col-sm-3"> 
       <p>Workshop</p>
-      <img src="images/workshop.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images/Workshop.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Speaking Event</p>
