--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,9 @@
     <p>Address: Lusaka, Zambia</p>
     
     <h3>Connect with Me</h3>
-    <a href="https://twitter.com/simatsim" target="_blank">Twitter</a> |
-    <a href="https://linkedin.com/in/simatsim" target="_blank">LinkedIn</a> |
-    <a href="https://facebook.com/simatsim" target="_blank">Facebook</a>
+    <a href="https://linktr.ee/SimateSimasiku?utm_source=linktree_profile_share&ltsid=d3210c8d-380b-4b31-9183-add175d1d1be" target="_blank">Link.tree</a> |
+    <a href="https://linktr.ee/SimateSimasiku?utm_source=linktree_profile_share&ltsid=d3210c8d-380b-4b31-9183-add175d1d1be" target="_blank">LinkedIn</a> |
+  
   </div>
 </div>
 
