--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!-- About Section -->
 <div class="container-fluid bg-3 text-center" id="about">    
   <h3>About Me</h3>
-  <p>I am Simate Simasiku, a dedicated Sustainable Development Speaker, Mental Health Advocate, and Financial Consultant. My passion for community growth and sustainability drives my work in advocacy, insurance, and technology.</p>
+  <p>I am Simate Simasiku, a dedicated Sustainable Development Speaker, Software Engineer, Mental Health Advocate, and Financial Consultant. My passion for community growth and sustainability drives my work in advocacy, insurance, and technology.</p>
 
   <div class="row">
     <!-- Education Card -->
