--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <div class="card work-card">
         <h4><i class="glyphicon glyphicon-briefcase"></i> Professional Work</h4>
         <ul>
+           <li>Information, communication and technology officer and Alliance for accountability advocates Zambia</li>
           <li>Financial Consultant at Prudential Life Assurance Zambia, providing tailored insurance and investment solutions.</li>
           <li>Founder of Smart Ventures, a Fintech company focused on empowering young leaders in technology, graphics, and financial literacy.</li>
         </ul>
